Fix avatar spacing in info form

--- a/themes/averi/style.css
+++ b/themes/averi/style.css
@@ -224,13 +224,14 @@ TABLE.tag_list>TBODY>TR>TD:after {
 	text-align: center;
 }
 
-image_info form infomode-view {
+.image_info .form {
+	width: auto;
+}
+
+.image_info .form .infomode-view {
 	width: 80%
 }
 
-TABLE.form.image_info {
-	width: auto;
-}
 
 #Statsmain .blockbody {
 	padding-bottom: 15px;
